--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "3.2.6",
     "hjs": "*",
     "node-oauth": ">= 0.1.3",
-    "mocha": "~1.11.0"
+    "mocha": "~1.11.0",
+    "underscore": "~1.4.4"
   }
 }
