--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hjs": "*",
     "node-oauth": ">= 0.1.3",
     "mocha": "~1.11.0",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "moment": "~2.0.0"
   }
 }
