--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-oauth": ">= 0.1.3",
     "mocha": "~1.11.0",
     "underscore": "~1.4.4",
-    "moment": "~2.0.0"
+    "moment": "~2.0.0",
+    "nconf": ">= 0.6.7"
   }
 }
