--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 node_modules
 settings.json
+0 info it worked if it ends with ok
+1 verbose cli [ 'node', '/usr/local/bin/npm', 'start' ]
+2 info using npm@1.2.24
+3 info using node@v0.11.2
+4 verbose read json /Users/jonezy/Projects/shakes/example/package.json
+5 error Error: ENOENT, open '/Users/jonezy/Projects/shakes/example/package.json'
+6 error If you need help, you may report this log at:
+6 error     <http://github.com/isaacs/npm/issues>
+6 error or email it to:
+6 error     <npm-@googlegroups.com>
+7 error System Darwin 12.4.0
+8 error command "node" "/usr/local/bin/npm" "start"
+9 error cwd /Users/jonezy/Projects/shakes/example
+10 error node -v v0.11.2
+11 error npm -v 1.2.24
+12 error path /Users/jonezy/Projects/shakes/example/package.json
+13 error code ENOENT
+14 error errno 34
+15 verbose exit [ 34, true ]
